--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <header id="masthead" class="site-header masthead-logo-in-menu" role="banner">
  <nav role="navigation" class="site-navigation main-navigation primary use-sticky-menu">
  <div class="full-container">
-  <a href="./index.html" title="Aerospace 101" rel="home" class="logo"><img src="./aerospacelogo.png"  class="logo-height-constrain"  width="1000"  height="100"  alt="Aerospace 101 Logo"  /></a>
+  <a href="https://aerospace101.com/index.html" title="Aerospace 101" rel="home" class="logo"><img src="./aerospacelogo.png"  class="logo-height-constrain"  width="1000"  height="100"  alt="Aerospace 101 Logo"  /></a>
   <div class="menu-menu-1-container"><ul id="menu-menu-1" class="menu"><li id="menu-item-249" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-27 current_page_item menu-item-249"><a href="./index.html">Welcome</a></li>
    <li id="menu-item-222" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-222">
    <a href="toc.html">Table of Contents</a>
@@ -37,7 +37,7 @@
    <li id="menu-item-243" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-243"><a href="./propulsion/index.html">Propulsion</a></li>
    <li id="menu-item-248" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-248"><a href="./aircraft-instruments/index.html">Aircraft Instruments</a></li>
    <li id="menu-item-275" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-275"><a href="./aircraft-performance/index.html">Aircraft Performance</a></li>
-   <li class="menu-item-type-post_type menu-item-object-page menu-item-276"><a href="./Flight-Mechanics/index.html">Flight Mechanics</a></li>
+   <li id="menu-item-276" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-276"><a href="./Flight-Mechanics/index.html">Flight Mechanics</a></li>
    <li id="menu-item-356" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-356"><a href="./aeroelasticity/index.html">Aeroelasticity</a></li>
    <li id="menu-item-363" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-363"><a href="./wind-tunnel-simulation/index.html">Wind Tunnel Simulation</a>   </li>
    </ul>
