--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
  <meta charset="UTF-8" />
  <meta http-equiv="X-UA-Compatible" content="IE=10" />
- <meta name="description" content="Information and Calculation pages for Engineering Students">	
+ <meta name="description" content="Information and Calculation pages for Engineering Students">
+ <meta http-equiv="refresh" content="0; URL=https://aerospace101.com/index.html" />
  <meta name="keywords" content="Aerospace, Aeronautics, Flight Mechanics, Aircraft Performance, Fluid Mechanics">	
  <title>Aerospace 101 | aerospace101.com</title>
  <link rel='stylesheet' id='style-css'  href='./style.css' type='text/css' media='all' />
