--- a/toc.html
+++ b/toc.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=10" /> 
 <meta name="description" content="Information and Calculation pages for Engineering Students">	
 <meta name="keywords" content="Aerospace, Aeronautics, Flight Mechanics, Aircraft Performance, Fluid Mechanics">	 
+<meta http-equiv="refresh" content="0; URL=https://aerospace101.com/toc.html" />
 <title>Resources | Aerospace 101</title>
 <link rel='stylesheet' id='style-css'  href='../style.css' type='text/css' media='all' />
 <link rel="stylesheet" href="/jqmath/jqmath-0.4.3.css">
