--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
  <title>Aerospace 101 | aerospace101.com</title>
 </head>
 
-<body class="page page-id-364 page-parent page-template page-template-templates page-template-template-full-notitle page-template-templatestemplate-full-notitle-php siteorigin-panels responsive layout-full no-js has-menu-search panels-style-force-full">
-<div id="page-wrapper">
+<body>
+<div>
 	&nbsp;
-</div><!-- #page-wrapper -->
+</div>
 </body>
 </html>
