--- a/moc/index.html
+++ b/moc/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+ <meta charset="UTF-8" />
+ <meta http-equiv="X-UA-Compatible" content="IE=10" />
+ <meta name="description" content="Information and Calculation pages for Engineering Students">
+ <meta http-equiv="refresh" content="0; URL=https://aerospace101.com/gas-dynamics-and-supersonic-flow/index.html" />
+ <meta name="keywords" content="Aerospace, Aeronautics, Flight Mechanics, Aircraft Performance, Fluid Mechanics">	
+ <title>Aerospace 101 | aerospace101.com</title>
+</head>
 
+<body>
+<div>
+	&nbsp;
+</div>
+</body>
+</html>
