--- a/properties-of-the-atmosphere/index.html
+++ b/properties-of-the-atmosphere/index.html
@@ -5,11 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=10" />
 <meta http-equiv="refresh" content="0; URL=https://aerospace101.com/properties-of-the-atmosphere/index.html" />
 <title>Resources | Aerodynamics for Students</title>
-<link rel='stylesheet' id='style-css'  href='../style.css' type='text/css' media='all' />
-<link rel="stylesheet" href="/jqmath/jqmath-0.4.3.css">
 </head>
 
-<body class="page page-id-364 page-parent page-template page-template-templates page-template-template-full-notitle page-template-templatestemplate-full-notitle-php siteorigin-panels responsive layout-full no-js has-menu-search panels-style-force-full">
+<body>
 &nbsp;
 </body>
 </html>
